ymlfile/svc_deploy_apple.yml
---
# svc-shop > cluster-ip(default)
apiVersion: v1
kind: Service
metadata:
  name: svc-apple
spec:
  selector:
    app: apple
  ports:
  - port: 80
    targetPort: 80
---
# deploy-shop
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple
spec:
  replicas: 3
  selector:
    matchLabels:
      app: apple
  template:
    metadata:
      labels:
        app: apple
    spec:
      containers:
      - name: apple
        image: chaewon0720/keduitlab:apple
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
