ymlfile/svc_deploy_test.yml
---
# svc-shop > cluster-ip(default)
apiVersion: v1
kind: Service
metadata:
  name: svc-test
spec:
  selector:
    app: test
  ports:
  - port: 80
    targetPort: 80
---
# deploy-shop
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test
        image: chaewon0720/keduitlab:first
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
