ymlfile/lb.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-fruits
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: www.test.com
    http:
      paths:
      - pathType: Prefix
        path: /apple(/|$)
        backend:
          service:
            name: svc-apple
            port: 
              number: 80
      - pathType: Prefix
        path: /banana(/|$)
        backend:
          service:
            name: svc-banana
            port: 
              number: 80
      - pathType: Prefix
        path: /($)
        backend:
          service:
            name: svc-test
            port: 
              number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: apple
spec:
  selector:
    app: apple
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: banana
spec:
  selector:
    app: banana
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  selector:
    app: test
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
